 - Implemented Stop button to not only stop rendering but also networking.
 - Fixed the problem of scrolling position (remember position in a page).
 - Implemented a new scheme of scroll-position remembering. This is one per
   visited page intead of one per url (this is more standard).
 - Fixed a subtle bug in klist that was affecting IO.
 - Fixed the position of the Bug Meter popup menu.
   Patches: Jorge Arellano
+- Connected signals to <li> elements (fixes links within lists).
 - Enabled text, background-color and geometry in preferences.
 - Enabled clicking over image links.
 - Improved notification upon leaving links.
 - Implemented image-link URL showing in status bar.
 - Added missing size-parsing for the <hr> element.
 - Hooked "Activate" to the form_receiver.
 - Connected the plain page context menu.
 - Added code for the image menu and hooked it to dw2 signals.
 - Hooked the page and link menus.
 - Added a image-loading toggle button to the UI (not functional yet).
   Patches: place
+- Fixed a problem with locally-installed dpis.
 - Added code for optional image loading (nice interface) very advanced!
   Patch: place, Jorge Arellano
+- Fixed a va_list-related SEGFAULT on 64bit-arch in dStr_vsprintfa().
   Added const declarations in html parser.
   Patch: Vincent Thomasset
+- Fixed void to int conversions for 64bit-arch.
   Patch: Jorge Arellano, higuita
+- Added a strndup() replacement in dw2
   Patch: Alexander Becher, Johannes Hofmann, Jorge Arellano
+- Fixed calcHashValue() to only return non-negative numbers (was SEGFAULT).
 - Improved scrolling performance on large pages by copying screen data
    instead of rendering.
 - Updated configure.in to check only for fltk2-config.
 - Implemented drag-scrolling with the mouse's middle button.
 - Disabled double buffering (good for debugging redraws).
   Patches: Johannes Hofmann
+- Improved FLTK library detection at configure time.
   Patch: Frank Gevaerts

 TODO:

 - test no_proxy (set a list in dillorc).